Fix medium-app main menu responsive alignment by adjusting Box responsive behavior when there is a separator.

--- a/src/scss/grommet-core/_objects.index.scss
+++ b/src/scss/grommet-core/_objects.index.scss
@@ -35,7 +35,8 @@
     @include inuit-font-size($label-font-size, inherit);
 
     @include media-query(palm) {
-      margin-left: halve($inuit-base-spacing-unit);
+      display: none;
+      //margin-left: halve($inuit-base-spacing-unit);
     }
 
     @include media-query(lap-and-up) {
